--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -2,7 +2,8 @@
 
 puts "\nHave you sourced your OpenStack credentials today???\n"
 
-nodes = ['master','node1']
+#nodes = ['master','node1']
+nodes = ['master']
 
 Vagrant.configure("2") do |config|
   config.vm.box = "openstack"
@@ -19,14 +20,15 @@ Vagrant.configure("2") do |config|
         else
           os.flavor = /m1.small/
         end             # Regex or String
-        os.image        = /ubuntu/                 # Regex or String
+        os.image        = /web-image-packer/                 # Regex or String
         os.keypair_name = "demo-keypair"      # as stored in Nova
         os.ssh_username = "ubuntu"           # login for the VM
         os.networks = ["demo-network"]
         os.floating_ip = :auto
         os.floating_ip_pool = "EXTNET"
       end
-      box.vm.provision :shell, :path => "src/#{server}.sh"
+      #box.vm.provision :shell, :path => "src/#{server}.sh"
+      box.vm.provision :ansible, :playbook => "src/web-content.yaml"
     end
   end
 end
